--- a/src/css/screen.css
+++ b/src/css/screen.css
@@ -1,17 +1,63 @@
 @font-face {
   font-family: 'Pluto Sans Cond Light';
   src: url("/fonts/pluto-sans.eot");
-  src: url("/fonts/pluto-sans.eot?#iefix") format("embedded-opentype"), url("/fonts/pluto-sans.woff") format("woff"), url("/fonts/pluto-sans.ttf") format("truetype"); }
+  src: url("/fonts/pluto-sans.eot?#iefix") format("embedded-opentype"), url("/fonts/pluto-sans.woff") format("woff"), url("/fonts/pluto-sans.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal; }
+@font-face {
+  font-family: 'Rooney Web';
+  src: url("/fonts/rooney-light.eot");
+  src: url("/fonts/rooney-light.eot?#iefix") format("embedded-opentype"), url("/fonts/rooney-light.woff") format("woff"), url("/fonts/rooney-light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal; }
+@font-face {
+  font-family: 'Rooney Web Italic';
+  src: url("/fonts/rooney-light-italic.eot");
+  src: url("/fonts/rooney-light-italic.eot?#iefix") format("embedded-opentype"), url("/fonts/rooney-light-italic.woff") format("woff"), url("/fonts/rooney-light-italic.ttf") format("truetype");
+  font-weight: 300;
+  font-style: italic; }
+@font-face {
+  font-family: 'Rooney Web Bold';
+  src: url("/fonts/rooney-bold.eot");
+  src: url("/fonts/rooney-bold.eot?#iefix") format("embedded-opentype"), url("/fonts/rooney-bold.woff") format("woff"), url("/fonts/rooney-bold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal; }
 body {
   margin: 0;
-  font-family: "rooney-web-1", "rooney-web-2", "Lora", Georgia, serif;
+  font-family: "Rooney Web", "Lora", Georgia, serif;
   font-size: 16px;
   font-weight: 300;
   line-height: 1.8em;
   color: #434343;
   background: #fff; }
+  body strong, body b {
+    font-family: 'Rooney Web Bold';
+    font-weight: bold; }
+  body em, body i {
+    font-family: 'Rooney Web Italic';
+    font-style: italic;
+    font-weight: 300; }
   body.home nav a {
     color: #fff; }
+    body.home nav a:hover {
+      color: #f194c9; }
+  body.home footer {
+    background: #0c2b3c; }
+    body.home footer ul a {
+      color: #36b5ab; }
+      body.home footer ul a:hover {
+        color: #f194c9; }
+
+.sprite {
+  image-rendering: -moz-crisp-edges;
+  /* Firefox */
+  image-rendering: -o-crisp-edges;
+  /* Opera */
+  image-rendering: -webkit-optimize-contrast;
+  /* Webkit (non-standard naming) */
+  image-rendering: pixelated;
+  -ms-interpolation-mode: nearest-neighbor;
+  /* IE (non-standard property) */ }
 
 #earthbounded {
   width: 54px;
@@ -22,12 +68,39 @@ body {
   margin-left: -27px;
   margin-top: -29px;
   display: block; }
-  #earthbounded.fp {
-    background: url("/images/sprite-fp.png"); }
   #earthbounded.left {
-    background: url("/images/sprite-left.png"); }
+    background-image: url("/images/index/sprite-left.png");
+    image-rendering: -moz-crisp-edges;
+    /* Firefox */
+    image-rendering: -o-crisp-edges;
+    /* Opera */
+    image-rendering: -webkit-optimize-contrast;
+    /* Webkit (non-standard naming) */
+    image-rendering: pixelated;
+    -ms-interpolation-mode: nearest-neighbor;
+    /* IE (non-standard property) */ }
   #earthbounded.right {
-    background: url("/images/sprite-right.png"); }
+    background-image: url("/images/index/sprite-right.png");
+    image-rendering: -moz-crisp-edges;
+    /* Firefox */
+    image-rendering: -o-crisp-edges;
+    /* Opera */
+    image-rendering: -webkit-optimize-contrast;
+    /* Webkit (non-standard naming) */
+    image-rendering: pixelated;
+    -ms-interpolation-mode: nearest-neighbor;
+    /* IE (non-standard property) */ }
+  #earthbounded.walk {
+    background-image: url("/images/bysusanlin-earthbound.gif");
+    image-rendering: -moz-crisp-edges;
+    /* Firefox */
+    image-rendering: -o-crisp-edges;
+    /* Opera */
+    image-rendering: -webkit-optimize-contrast;
+    /* Webkit (non-standard naming) */
+    image-rendering: pixelated;
+    -ms-interpolation-mode: nearest-neighbor;
+    /* IE (non-standard property) */ }
 
 #ufo {
   width: 88px;
@@ -38,10 +111,19 @@ body {
   margin-left: -44px;
   margin-top: -43px; }
   #ufo.flying {
-    background: url("/images/ufo.png"); }
+    background-image: url("/images/index/ufo.png");
+    image-rendering: -moz-crisp-edges;
+    /* Firefox */
+    image-rendering: -o-crisp-edges;
+    /* Opera */
+    image-rendering: -webkit-optimize-contrast;
+    /* Webkit (non-standard naming) */
+    image-rendering: pixelated;
+    -ms-interpolation-mode: nearest-neighbor;
+    /* IE (non-standard property) */ }
 
 a {
-  color: #36b5ab;
+  color: #447f9c;
   text-decoration: none; }
   a:hover {
     color: #f194c9; }
@@ -62,68 +144,160 @@ nav {
   left: 0; }
   nav ul {
     text-align: center; }
+    nav ul li {
+      list-style-type: none;
+      line-height: 32px; }
     nav ul a {
-      font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif;
-      text-transform: uppercase;
-      font-size: 12px; }
-      nav ul a li {
-        list-style-type: none; }
+      font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif; }
 
 #onett {
-  background: url("/images/onett.png") top center;
+  background-image: url("/images/index/onett.png");
+  background-position: top center;
   height: 1730px;
-  width: 100%; }
+  width: 100%;
+  image-rendering: -moz-crisp-edges;
+  /* Firefox */
+  image-rendering: -o-crisp-edges;
+  /* Opera */
+  image-rendering: -webkit-optimize-contrast;
+  /* Webkit (non-standard naming) */
+  image-rendering: pixelated;
+  -ms-interpolation-mode: nearest-neighbor;
+  /* IE (non-standard property) */ }
   #onett #trees {
-    background: url("/images/z-trees.png") bottom center;
+    background-image: url("/images/index/z-trees.png");
+    background-position: bottom center;
     height: 1730px;
     width: 100%;
-    position: absolute; }
+    position: absolute;
+    image-rendering: -moz-crisp-edges;
+    /* Firefox */
+    image-rendering: -o-crisp-edges;
+    /* Opera */
+    image-rendering: -webkit-optimize-contrast;
+    /* Webkit (non-standard naming) */
+    image-rendering: pixelated;
+    -ms-interpolation-mode: nearest-neighbor;
+    /* IE (non-standard property) */ }
 
 #saturn {
-  background: url("/images/saturn-valley.png") center center;
+  background-image: url("/images/index/saturn-valley.png");
+  background-position: center center;
   height: 2300px;
-  width: 100%; }
+  width: 100%;
+  image-rendering: -moz-crisp-edges;
+  /* Firefox */
+  image-rendering: -o-crisp-edges;
+  /* Opera */
+  image-rendering: -webkit-optimize-contrast;
+  /* Webkit (non-standard naming) */
+  image-rendering: pixelated;
+  -ms-interpolation-mode: nearest-neighbor;
+  /* IE (non-standard property) */ }
   #saturn #valley {
-    background: url("/images/z-saturn.png") center center;
+    background-image: url("/images/index/z-saturn.png");
+    background-position: center center;
     height: 950px;
     width: 100%;
-    position: absolute; }
+    position: absolute;
+    image-rendering: -moz-crisp-edges;
+    /* Firefox */
+    image-rendering: -o-crisp-edges;
+    /* Opera */
+    image-rendering: -webkit-optimize-contrast;
+    /* Webkit (non-standard naming) */
+    image-rendering: pixelated;
+    -ms-interpolation-mode: nearest-neighbor;
+    /* IE (non-standard property) */ }
   #saturn #distorter {
     height: 2300px;
     width: 100%;
     position: absolute; }
     #saturn #distorter.phased1 {
-      background: url("/images/ufo1.png") center center; }
+      background-image: url("/images/index/z-ufo1.png");
+      background-position: center center;
+      image-rendering: -moz-crisp-edges;
+      /* Firefox */
+      image-rendering: -o-crisp-edges;
+      /* Opera */
+      image-rendering: -webkit-optimize-contrast;
+      /* Webkit (non-standard naming) */
+      image-rendering: pixelated;
+      -ms-interpolation-mode: nearest-neighbor;
+      /* IE (non-standard property) */ }
     #saturn #distorter.phased2 {
-      background: url("/images/ufo2.png") center center; }
-    #saturn #distorter.phased3 {
-      background: url("/images/ufo3.png") center center; }
-
-#lostworld {
-  background: url("/images/lostworld.png") center center;
-  width: 100%;
-  height: 100px; }
+      background-image: url("/images/index/z-ufo2.png");
+      background-position: center center;
+      image-rendering: -moz-crisp-edges;
+      /* Firefox */
+      image-rendering: -o-crisp-edges;
+      /* Opera */
+      image-rendering: -webkit-optimize-contrast;
+      /* Webkit (non-standard naming) */
+      image-rendering: pixelated;
+      -ms-interpolation-mode: nearest-neighbor;
+      /* IE (non-standard property) */ }
 
 #pinkcloud {
-  background: url("/images/sky.png") center center;
+  background-image: url("/images/index/sky.png");
+  background-position: center center;
   width: 100%;
-  height: 1840px; }
+  height: 1840px;
+  image-rendering: -moz-crisp-edges;
+  /* Firefox */
+  image-rendering: -o-crisp-edges;
+  /* Opera */
+  image-rendering: -webkit-optimize-contrast;
+  /* Webkit (non-standard naming) */
+  image-rendering: pixelated;
+  -ms-interpolation-mode: nearest-neighbor;
+  /* IE (non-standard property) */ }
   #pinkcloud #clouds {
-    background: url("/images/z-clouds.png") center center;
+    background-image: url("/images/index/z-clouds.png");
+    background-position: center center;
     height: 1840px;
     width: 100%;
-    position: absolute; }
+    position: absolute;
+    image-rendering: -moz-crisp-edges;
+    /* Firefox */
+    image-rendering: -o-crisp-edges;
+    /* Opera */
+    image-rendering: -webkit-optimize-contrast;
+    /* Webkit (non-standard naming) */
+    image-rendering: pixelated;
+    -ms-interpolation-mode: nearest-neighbor;
+    /* IE (non-standard property) */ }
 
 #moonside {
   width: 100%;
   height: 1434px;
-  background: url("/images/moonside.png") center center; }
+  background-image: url("/images/index/moonside.png");
+  background-position: center center;
+  image-rendering: -moz-crisp-edges;
+  /* Firefox */
+  image-rendering: -o-crisp-edges;
+  /* Opera */
+  image-rendering: -webkit-optimize-contrast;
+  /* Webkit (non-standard naming) */
+  image-rendering: pixelated;
+  -ms-interpolation-mode: nearest-neighbor;
+  /* IE (non-standard property) */ }
   #moonside #ending {
     height: 580px;
     width: 100%;
     position: absolute; }
     #moonside #ending.show {
-      background: url("/images/ending.png") center center; }
+      background-image: url("/images/index/ending.png");
+      background-position: center center;
+      image-rendering: -moz-crisp-edges;
+      /* Firefox */
+      image-rendering: -o-crisp-edges;
+      /* Opera */
+      image-rendering: -webkit-optimize-contrast;
+      /* Webkit (non-standard naming) */
+      image-rendering: pixelated;
+      -ms-interpolation-mode: nearest-neighbor;
+      /* IE (non-standard property) */ }
 
 #work div {
   padding: 8% 20% 10%;
@@ -171,7 +345,8 @@ nav {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%; }
+    height: 100%;
+    max-width: 1200px; }
 #talks .speakerdeck-wrapper {
   padding-left: 0; }
 
@@ -199,12 +374,10 @@ nav {
   clear: both; }
 
 footer {
-  background: #0c2b3c;
+  background: #f5f4f1;
   color: #fff;
   font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif;
   padding: 2em 0 1.5em; }
-  footer ul a {
-    color: #36b5ab; }
   footer ul li {
     float: left;
     display: block;
@@ -217,40 +390,6 @@ footer {
     font-size: 12px;
     color: #afb9c0; }
 
-.overlay {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #0c2b3c;
-  filter: alpha(opacity=95);
-  -moz-opacity: 0.95;
-  -khtml-opacity: 0.95;
-  opacity: 0.95;
-  z-index: 10000; }
-
-.about {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 10001;
-  text-align: centered; }
-  .about #closeOverlay {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 48px; }
-  .about p {
-    margin: 12% auto 15%;
-    padding: 0 10%;
-    max-width: 500px;
-    color: #fff; }
-
 .typeHighlight {
   color: #f194c9 !important; }
 
@@ -258,16 +397,13 @@ footer {
   color: #afb9c0 !important; }
 
 @media screen and (max-width: 500px) {
-  .about {
-    overflow: auto; }
-
   nav {
     display: none; }
 
-  #work div, #talks div {
+  #about div, #work div, #talks div {
     padding: 8% 10% 10%; }
 
-  #work .intro, #talks .intro {
+  #about .intro, #work .intro, #talks .intro {
     padding: 3% 10% 6%; }
 
   footer ul li {
