--- a/src/css/screen.css
+++ b/src/css/screen.css
@@ -37,16 +37,26 @@ body {
     font-family: 'Rooney Web Italic';
     font-style: italic;
     font-weight: 300; }
-  body.home nav a {
-    color: #fff; }
-    body.home nav a:hover {
-      color: #f194c9; }
-  body.home footer {
+  body h1, body h2, body h3, body h4, body h5, body h6 {
+    font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif; }
+  body hr {
+    border: 1px dotted #dadee2; }
+  body.home {
     background: #0c2b3c; }
-    body.home footer ul a {
+    body.home header a {
       color: #36b5ab; }
-      body.home footer ul a:hover {
+      body.home header a:hover {
         color: #f194c9; }
+    body.home header ul li {
+      border-bottom: 2px solid #447f9c; }
+    body.home footer {
+      background: #0c2b3c; }
+      body.home footer ul {
+        border-top: 0; }
+      body.home footer ul a {
+        color: #36b5ab; }
+        body.home footer ul a:hover {
+          color: #f194c9; }
 
 .sprite {
   image-rendering: -moz-crisp-edges;
@@ -63,7 +73,7 @@ body {
   width: 54px;
   height: 58px;
   position: absolute;
-  top: 828px;
+  top: 908px;
   left: 50%;
   margin-left: -27px;
   margin-top: -29px;
@@ -133,22 +143,31 @@ a {
     border: 0; }
 
 header {
-  background: #f5f4f1;
-  text-align: center; }
-  header img {
-    margin: 15px 25px 10px; }
+  margin-top: -16px;
+  padding: 0;
+  min-height: 65px; }
+  header ul {
+    padding: 15px 0 50px; }
+    header ul li {
+      float: left;
+      display: block;
+      list-style-type: none;
+      margin-right: 35px;
+      padding: 10px 0px 0px;
+      border-bottom: 2px solid #aeeed9; }
+  header a {
+    font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif; }
 
 nav {
   position: fixed;
-  top: 10px;
-  left: 0; }
-  nav ul {
-    text-align: center; }
-    nav ul li {
-      list-style-type: none;
-      line-height: 32px; }
-    nav ul a {
-      font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif; }
+  left: 25px;
+  top: 50%;
+  transform: translate(0, -55%);
+  font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 1.6em; }
+  nav img {
+    padding-left: 25px; }
 
 #onett {
   background-image: url("/images/index/onett.png");
@@ -299,74 +318,44 @@ nav {
       -ms-interpolation-mode: nearest-neighbor;
       /* IE (non-standard property) */ }
 
-#work div {
-  padding: 8% 20% 10%;
-  border-bottom: 1px dotted #dadee2; }
-  #work div:last-child {
-    border-bottom: 0; }
-  #work div p {
-    max-width: 500px;
-    font-size: 16px;
-    font-weight: 300; }
-  #work div img {
-    max-width: 100%; }
-#work h2 {
-  font-size: 32px;
-  font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif;
-  font-weight: 300;
-  line-height: 48px; }
-#work .intro {
-  padding: 3% 20% 6%; }
-
-#talks div {
-  padding: 3% 20% 6%;
-  border-bottom: 1px dotted #dadee2; }
-  #talks div:last-child {
-    border-bottom: 0; }
-  #talks div p {
-    max-width: 500px;
-    font-size: 16px;
+.container {
+  margin: 0 auto;
+  padding: 0 5% 0 25%;
+  max-width: 1370px;
+  text-align: left; }
+  .container div {
+    text-transform: left;
+    padding: 8% 0 10%;
+    border-bottom: 1px dotted #dadee2; }
+    .container div:last-child {
+      border-bottom: 0; }
+    .container div p, .container div ul {
+      max-width: 500px;
+      font-size: 16px;
+      font-weight: 300; }
+    .container div img {
+      max-width: 100%; }
+  .container h2 {
+    font-size: 32px;
+    font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif;
     font-weight: 300;
-    line-height: 28.8px; }
-  #talks div img {
-    max-width: 100%; }
-#talks h2 {
-  font-size: 32px;
-  font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif;
-  font-weight: 300;
-  line-height: 48px; }
-#talks .video .video-wrapper {
-  position: relative;
-  padding-bottom: 56.25%;
-  padding-top: 25px;
-  height: 0; }
-  #talks .video .video-wrapper iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    max-width: 1200px; }
-#talks .speakerdeck-wrapper {
-  padding-left: 0; }
-
-#about div {
-  padding: 3% 20% 6%;
-  border-bottom: 1px dotted #dadee2; }
-  #about div:last-child {
-    border-bottom: 0; }
-  #about div p {
-    max-width: 500px;
-    font-size: 16px;
-    font-weight: 300;
-    line-height: 28.8px; }
-  #about div img {
-    max-width: 100%; }
-#about h2 {
-  font-size: 32px;
-  font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif;
-  font-weight: 300;
-  line-height: 48px; }
+    line-height: 48px; }
+  .container .intro {
+    padding: 3% 0 6%; }
+  .container .video .video-wrapper {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 25px;
+    height: 0; }
+    .container .video .video-wrapper iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      max-width: 1200px; }
+  .container .speakerdeck-wrapper {
+    padding-left: 0; }
 
 .clear {
   margin: 0;
@@ -374,20 +363,24 @@ nav {
   clear: both; }
 
 footer {
-  background: #f5f4f1;
   color: #fff;
   font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif;
-  padding: 2em 0 1.5em; }
-  footer ul li {
-    float: left;
-    display: block;
-    list-style-type: none;
-    width: 33.33%;
-    height: 50px; }
+  padding: 0 5% 15px 25%;
+  max-width: 1370px;
+  margin: 0 auto; }
+  footer ul {
+    border-top: 1px dotted #dadee2;
+    padding: 30px 0 0; }
+    footer ul li {
+      float: left;
+      display: block;
+      list-style-type: none;
+      width: 33.33%;
+      height: 50px; }
   footer .footnote {
-    margin: 2em 0 0 40px;
+    margin: 2em 0 0;
     font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif;
-    font-size: 12px;
+    font-size: 13px;
     color: #afb9c0; }
 
 .typeHighlight {
@@ -396,17 +389,26 @@ footer {
 .typeLowlight {
   color: #afb9c0 !important; }
 
-@media screen and (max-width: 500px) {
+.typeMintLight {
+  color: #aeeed9 !important; }
+
+.typeBluelight {
+  color: #21dcc7 !important; }
+
+@media screen and (max-width: 800px) {
   nav {
     display: none; }
 
-  #about div, #work div, #talks div {
-    padding: 8% 10% 10%; }
+  .container {
+    padding: 0 5%; }
 
-  #about .intro, #work .intro, #talks .intro {
-    padding: 3% 10% 6%; }
+  footer {
+    padding: 30px 5% 15px; }
 
   footer ul li {
     width: 100%; } }
+@media screen and (max-width: 600px) {
+  .home header {
+    min-height: 110px; } }
 
 /*# sourceMappingURL=screen.css.map */
