--- a/src/css/screen.scss
+++ b/src/css/screen.scss
@@ -6,7 +6,7 @@ $h3: 24px;
 $h4: 21px;
 $h5: 16px;
 $h6: 14px;
-$h7: 12px;
+$h7: 13px;
 
 $p: 16px;
 
@@ -125,17 +125,39 @@ body {
 		font-weight: 300;
 	}
 
-	&.home {
-		nav a {
-			color: $white;
+	h1, h2, h3, h4, h5, h6 {
+		font-family: $plutosans;
+	}
+
+	hr {
+		border: $dottedBorder;
+	}
+
+	&.home { //custom for body on homepage
+
+		background: $blueblack;
+
+		header a {
+			color: $teal;
 			&:hover {
 				color: $flora;
 			}
 		}
+
+		header ul li {
+			border-bottom: 2px solid $jean;
+		}
+
 		footer {
 			background: $blueblack;
+
+			ul {
+				border-top: 0;
+			}
+
 			ul a {
 				color: $teal;
+
 				&:hover {
 					color: $flora;
 				}
@@ -152,10 +174,8 @@ body {
 #earthbounded {
 	width: 54px;
 	height: 58px;
-	//position: fixed;
 	position: absolute;
-	//top: 50%;
-	top: 828px;
+	top: 908px;
 	left: 50%;
 	margin-left: -27px;
 	margin-top: -29px;
@@ -210,31 +230,40 @@ a {
 }
 
 header {
-	background: $beige;
-	text-align: center;
-
-	img {
-		margin: 15px 25px 10px;
-	}
-
-}
-
-nav {
-		position: fixed;
-		top: 10px;
-		left: 0;
+		margin-top: -16px;
+    padding: 0;
+		min-height: 65px;
 
 		ul {
-			text-align: center;
+			padding: 15px 0 50px;
 
 			li {
-				list-style-type: none;
-				line-height: $h2;
+				float: left;
+		    display: block;
+		    list-style-type: none;
+		    margin-right: 35px;
+		    padding: 10px 0px 0px;
+		    border-bottom: 2px solid #aeeed9;
 			}
+		}
 
 			a {
 				font-family: $plutosans;
 			}
+
+		}
+
+nav {
+		position: fixed;
+		left: 25px;
+		top: 50%;
+		transform: translate(0,-55%);
+		font-family: $plutosans;
+		font-size: $h6;
+		line-height: 1.6em;
+
+		img {
+			padding-left: 25px;
 		}
 
 	}
@@ -334,20 +363,24 @@ nav {
 
 	}
 
-	//////////////////////////////////////////////////////////
-	// work
 
-	#work {
+	.container {
+
+		margin: 0 auto;
+		padding: 0 5% 0 25%;
+		max-width: 1370px;
+		text-align: left;
 
 		div {
-			padding: 8% 20% 10%;
+			text-transform: left;
+			padding: 8% 0 10%;
 			border-bottom: $dottedBorder;
 
 			&:last-child {
 				border-bottom: 0;
 			}
 
-			p {
+			p, ul {
 				max-width: 500px;
 				font-size: $p;
 				font-weight: 300;
@@ -367,45 +400,7 @@ nav {
 		}
 
 		.intro {
-			padding: 3% 20% 6%;
-		}
-
-	}
-
-	//////////////////////////////////////////////////////////
-	// talks
-
-	#talks {
-
-		div {
-			padding: 3% 20% 6%;
-			border-bottom: $dottedBorder;
-
-			&:last-child {
-				border-bottom: 0;
-			}
-
-			p {
-				max-width: 500px;
-				font-size: $p;
-				font-weight: 300;
-				line-height: $p*1.8;
-			}
-
-			img {
-				max-width: 100%;
-			}
-
-		}
-
-		h2 {
-			font-size: $h2;
-			font-family: $plutosans;
-			font-weight: 300;
-			line-height: $h2*1.5;
-		}
-
-		.intro {
+			padding: 3% 0 6%;
 		}
 
 		.video {
@@ -432,45 +427,7 @@ nav {
 			padding-left: 0;
 		}
 
-	} //talks
-
-	//////////////////////////////////////////////////////////
-	// about
-
-	#about {
-
-		div {
-			padding: 3% 20% 6%;
-			border-bottom: $dottedBorder;
-
-			&:last-child {
-				border-bottom: 0;
-			}
-
-			p {
-				max-width: 500px;
-				font-size: $p;
-				font-weight: 300;
-				line-height: $p*1.8;
-			}
-
-			img {
-				max-width: 100%;
-			}
-
-		}
-
-		h2 {
-			font-size: $h2;
-			font-family: $plutosans;
-			font-weight: 300;
-			line-height: $h2*1.5;
-		}
-
-		.intro {
-		}
-
-	} //talks
+	}
 
 	.clear {
 		margin: 0;
@@ -480,12 +437,15 @@ nav {
 
 	footer {
 
-		background: $beige;
 		color: $white;
 		font-family: $plutosans;
-		padding: 2em 0 1.5em;
+		padding: 0 5% 15px 25%;
+		max-width: 1370px;
+		margin: 0 auto;
 
 		ul {
+			border-top: $dottedBorder;
+			padding: 30px 0 0;
 
 			li {
 				float: left;
@@ -497,7 +457,7 @@ nav {
 		}
 
 		.footnote {
-			margin: 2em 0 0 40px;
+			margin: 2em 0 0;
 			font-family: $plutosans;
 			font-size: $h7;
 			color: $grey;
@@ -511,23 +471,37 @@ nav {
 	.typeLowlight {
 		color: $grey !important;
 	}
+	.typeMintLight {
+		color: $lightMint !important;
+	}
+	.typeBluelight {
+		color: $mint !important;
+	}
 
-	@media screen and (max-width:500px) {
+	@media screen and (max-width:800px) {
 
 		nav {
 			display: none; //hide it
 		}
 
-		#about div, #work div, #talks div {
-			padding: 8% 10% 10%;
+		.container {
+			padding: 0 5%;
 		}
 
-		#about .intro, #work .intro, #talks .intro {
-			padding: 3% 10% 6%;
+		footer {
+			padding: 30px 5% 15px;
 		}
 
 		footer ul li {
 			width: 100%;
+		}
+
+	}
+
+	@media screen and (max-width:600px) {
+
+		.home header {
+			min-height: 110px;
 		}
 
 	}
