--- a/css/screen.css
+++ b/css/screen.css
@@ -46,16 +46,17 @@ body {
   body hr {
     border: 1px dotted #dadee2; }
   body.home {
-    background: #0c2b3c; }
+    background: #59ab27; }
     body.home header a {
-      color: #36b5ab; }
+      color: #fff; }
       body.home header a:hover {
-        color: #f194c9; }
+        color: #aeeed9; }
     body.home header ul li {
-      border-bottom: 2px solid #447f9c; }
+      border-bottom: 2px solid #488f0c; }
     body.home footer {
       background: #0c2b3c; }
       body.home footer ul {
+        margin-top: 0;
         border-top: 0; }
       body.home footer ul a {
         color: #36b5ab; }
@@ -77,7 +78,7 @@ body {
   width: 54px;
   height: 58px;
   position: absolute;
-  top: 908px;
+  top: 923px;
   left: 50%;
   margin-left: -27px;
   margin-top: -29px;
@@ -149,7 +150,7 @@ a {
 header {
   margin-top: -16px;
   padding: 0;
-  min-height: 65px; }
+  min-height: 80px; }
   header ul {
     padding: 15px 0 50px; }
     header ul li {
@@ -166,7 +167,7 @@ nav {
   position: fixed;
   left: 25px;
   top: 50%;
-  transform: translate(0, -55%);
+  transform: translate(0, -56%);
   font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.6em; }
@@ -337,6 +338,8 @@ nav {
       max-width: 500px;
       font-size: 16px;
       font-weight: 300; }
+    .container div ul {
+      padding-left: 17px; }
     .container div img {
       max-width: 100%; }
   .container h2 {
@@ -345,7 +348,7 @@ nav {
     font-weight: 300;
     line-height: 48px; }
   .container .intro {
-    padding: 3% 0 6%; }
+    padding: 0 0 6%; }
   .container .video .video-wrapper {
     position: relative;
     padding-bottom: 56.25%;
@@ -415,5 +418,5 @@ footer {
 
 @media screen and (max-width: 600px) {
   .home header {
-    min-height: 110px; }
+    min-height: 120px; }
  }
