--- a/src/css/screen.css
+++ b/src/css/screen.css
@@ -404,6 +404,8 @@ footer {
 
   .container {
     padding: 0 5%; }
+    .container .intro {
+      padding-top: 5%; }
 
   footer {
     padding: 30px 5% 15px; }
