--- a/src/css/screen.css
+++ b/src/css/screen.css
@@ -367,13 +367,12 @@ nav {
 
 footer {
   color: #fff;
-  font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif;
-  padding: 0 5% 15px 25%;
-  max-width: 1370px;
-  margin: 0 auto; }
+  font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif; }
   footer ul {
     border-top: 1px dotted #dadee2;
-    padding: 30px 0 0; }
+    padding: 30px 5% 15px 25%;
+    max-width: 1370px;
+    margin: 0 auto; }
     footer ul li {
       float: left;
       display: block;
@@ -381,7 +380,9 @@ footer {
       width: 33.33%;
       height: 50px; }
   footer .footnote {
-    margin: 2em 0 0;
+    padding: 30px 5% 15px 25%;
+    max-width: 1370px;
+    margin: 2em auto 0;
     font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif;
     font-size: 13px;
     color: #afb9c0; }
