--- a/css/screen.scss
+++ b/css/screen.scss
@@ -444,13 +444,12 @@ nav {
 
 		color: $white;
 		font-family: $plutosans;
-		padding: 0 5% 15px 25%;
-		max-width: 1370px;
-		margin: 0 auto;
 
 		ul {
 			border-top: $dottedBorder;
-			padding: 30px 0 0;
+      padding: 30px 5% 15px 25%;
+      max-width: 1370px;
+      margin: 0 auto;
 
 			li {
 				float: left;
@@ -462,8 +461,10 @@ nav {
 		}
 
 		.footnote {
-			margin: 2em 0 0;
-			font-family: $plutosans;
+      padding: 30px 5% 15px 25%;
+      max-width: 1370px;
+      margin: 2em auto 0;
+      font-family: $plutosans;
 			font-size: $h7;
 			color: $grey;
 		}
@@ -495,7 +496,7 @@ nav {
 			.intro {
 				padding-top: 5%;
 			}
-			
+
 		}
 
 		footer {
