--- a/src/css/screen.css
+++ b/src/css/screen.css
@@ -147,6 +147,8 @@ header {
   margin-top: -16px;
   padding: 0;
   min-height: 80px; }
+  header .mobile-logo {
+    display: none; }
   header ul {
     padding: 15px 0 50px; }
     header ul li {
@@ -402,6 +404,19 @@ footer {
 @media screen and (max-width: 800px) {
   nav {
     display: none; }
+
+  header .mobile-logo {
+    display: block;
+    margin-top: 30px; }
+  header ul {
+    margin-top: 0;
+    padding-top: 0; }
+
+  .home header .mobile-logo {
+    display: none; }
+  .home header ul {
+    margin-top: 14px;
+    padding-top: 15px; }
 
   .container {
     padding: 0 5%; }
