--- a/css/screen.css
+++ b/css/screen.css
@@ -405,6 +405,10 @@ footer {
 .typeBluelight {
   color: #21dcc7 !important; }
 
+.typeNums {
+  font-size: 14px !important;
+  font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif; }
+
 @media screen and (max-width: 990px) {
   nav {
     display: none; }
