--- a/css/screen.css
+++ b/css/screen.css
@@ -443,3 +443,8 @@ footer {
   .home header {
     min-height: 120px; }
  }
+
+@media screen and (max-width: 320px) {
+  .container .intro {
+      padding-top: 18%;
+  }
