the worst code that I will try to fix later

--- a/css/screen.css
+++ b/css/screen.css
@@ -405,6 +405,11 @@ footer {
 .typeBluelight {
   color: #21dcc7 !important; }
 
+.avatar {
+    border-radius: 100% !important;
+    max-width: 200px !important;
+}
+
 .typeNums {
   font-size: 14px !important;
   font-family: "Pluto Sans Cond Light", Helvetica, Arial, sans-serif; }
