it still doesn't match??

--- a/css/screen.css
+++ b/css/screen.css
@@ -46,7 +46,7 @@ body {
   body hr {
     border: 1px dotted #dadee2; }
   body.home {
-    background: #6daa38; }
+    background: #56ad16; }
     body.home header a {
       color: #fff; }
       body.home header a:hover {
